--- a/source/jade/disscus.jade
+++ b/source/jade/disscus.jade
@@ -49,7 +49,7 @@ block append content
 								span.closed ЗАКРЫТОЕ ! 
 								a(href="#") Решение задач методом анализа размерности
 							.itext 
-								p Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности и решения задач этим методом.
+								p Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности и решения задач этим методом.
 								.tags
 									a(href="#").tags-item
 										span.name Круглый стол
@@ -88,7 +88,7 @@ block append content
 							.iname
 								a(href="#") Решение задач методом анализа размерности
 							.itext 
-								p Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности и решения задач этим методом.
+								p Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности и решения задач этим методом.
 								.tags
 									a(href="#").tags-item
 										span.name Круглый стол
@@ -129,7 +129,7 @@ block append content
 								span.closed ЗАКРЫТОЕ ! 
 								a(href="#") Решение задач методом анализа размерности
 							.itext 
-								p Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности и решения задач этим методом.
+								p Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности и решения задач этим методом.
 								.tags
 									a(href="#").tags-item
 										span.name Круглый стол
@@ -168,7 +168,7 @@ block append content
 							.iname
 								a(href="#") Решение задач методом анализа размерности
 							.itext 
-								p Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности и решения задач этим методом.
+								p Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности и решения задач этим методом.
 								.tags
 									a(href="#").tags-item
 										span.name Круглый стол
@@ -193,8 +193,8 @@ block append content
 				.bcon
 					.item
 						.iname
-							span.quot
-							span.name Трудно получить доступ к работе на этом оборудовании
+							.quot
+							.name Трудно получить доступ к работе на этом оборудовании
 								.comments
 									a(href="#") 51
 						.itext Вениамин Ивановский в 13:45 <br>к 
@@ -203,8 +203,8 @@ block append content
 							a(href="#") ОБОРУДОВАНИЕ
 					.item
 						.iname
-							span.quot
-							span.name Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности
+							.quot
+							.name Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности
 								.comments
 									a(href="#") 51
 						.itext Вениамин Ивановский в 13:45 <br>к 
@@ -213,12 +213,12 @@ block append content
 							a(href="#") ОБОРУДОВАНИЕ
 					.item
 						.iname
-							span.quot
-							span.name Трудно получить доступ к работе на этом оборудовании
+							.quot
+							.name Трудно получить доступ к работе на этом оборудовании
 								.comments
 									a(href="#") 51
 						.itext Вениамин Ивановский в 13:45 <br>k
-							a(href="#")  IX Международная конференция. «Аналитические и численные методы моделирования естественно–научных и социальных проблем» <br>
+							a(href="#")  IX Международная конференция. «Аналитические и численные методы моделирования естественно–научных и социальных проблем» <br>
 							| в разделе 
 							a(href="#") СОБЫТИЯ
 			.box-right.boxside-sort-cat
