--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -1541,7 +1541,7 @@ h1.service-title
 			padding-left 0
 			.iname
 				background url("../img/quot.png") 0 3px no-repeat; 
-				span.name
+				.name
 					display inline-block
 					text-indent 25px
 				.comments
