fixed some issue with validation

--- a/source/jade/_popup-register.jade
+++ b/source/jade/_popup-register.jade
@@ -32,7 +32,7 @@
 				label(for="register__short-session") Чужой компьютер
 			.formgroup
 				input(type="submit" value="зарегистрироваться")
-			.you-agree Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг 
+			.you-agree Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг 
 				br
 				| (
 				a(href="#") пользовательское соглашение
