--- a/source/jade/about.jade
+++ b/source/jade/about.jade
@@ -29,7 +29,7 @@ block append content
 		//------------------------------------------------
 		.page-name
 			h1 Добро пожаловать
-			p Добро пожаловать на портал, содействуйщий развитию инжиниринга и промышленного дизайна в России.
+			p Добро пожаловать на портал, содействуйщий развитию инжиниринга и промышленного дизайна в России.
 		//------------------------------------------------
 		.main-left
 			img(src="img/content/about-page.png", alt="")
