--- a/source/jade/disscus-item.jade
+++ b/source/jade/disscus-item.jade
@@ -152,8 +152,8 @@ block append content
 				.bcon
 					.item
 						.iname
-							span.quot
-							span.name Трудно получить доступ к работе на этом оборудовании
+							.quot
+							.name Трудно получить доступ к работе на этом оборудовании
 								.comments
 									a(href="#") 51
 						.itext Вениамин Ивановский в 13:45 <br>к 
@@ -162,8 +162,8 @@ block append content
 							a(href="#") ОБОРУДОВАНИЕ
 					.item
 						.iname
-							span.quot
-							span.name Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности
+							.quot
+							.name Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности
 								.comments
 									a(href="#") 51
 						.itext Вениамин Ивановский в 13:45 <br>к 
@@ -172,12 +172,12 @@ block append content
 							a(href="#") ОБОРУДОВАНИЕ
 					.item
 						.iname
-							span.quot
-							span.name Трудно получить доступ к работе на этом оборудовании
+							.quot
+							.name Трудно получить доступ к работе на этом оборудовании
 								.comments
 									a(href="#") 51
 						.itext Вениамин Ивановский в 13:45 <br>k
-							a(href="#")  IX Международная конференция. «Аналитические и численные методы моделирования естественно–научных и социальных проблем» <br>
+							a(href="#")  IX Международная конференция. «Аналитические и численные методы моделирования естественно–научных и социальных проблем» <br>
 							| в разделе 
 							a(href="#") СОБЫТИЯ
 			//------------------------------------------------
