--- a/source/jade/events-item.jade
+++ b/source/jade/events-item.jade
@@ -47,7 +47,7 @@ block append content
 							img(src="img/content/180-135-2.jpg", alt="")
 					p В рамках «Гидроавиасалона-2014», который прошел в Геленджике, Минпромторгом, корпорацией Ростех и правительством Ростовской области был подписан меморандум о реализации инвестпроекта.
 					p «Мы договорились о выделении участка земли на базе территории воинской части. Минобороны согласилось передать аэродром в эксплуатацию Ростеху, «Вертолетам России», — пояснил глава Минпромторга Денис Мантуров. 
-					p Бывший владелец холдинга «Связьстрой» Роман Троценко тоже получил предложение: «Были намеки, что продажа бизнеса поможет с заказами. Причем концерн хотели получить практически бесплатно». В «Связьстрой» входили три компании: «Связьстрой-5» (Челябинск), «Связьстрой-2» (Краснодар) и «Межгорсвязьстрой». Из-за кризиса их оборот тогда сократился до $250 млн, и Троценко решил выйти из бизнеса. Но не бесплатно: «Мы нашли другого покупателя — «Конверс груп».
+					p Бывший владелец холдинга «Связьстрой» Роман Троценко тоже получил предложение: «Были намеки, что продажа бизнеса поможет с заказами. Причем концерн хотели получить практически бесплатно». В «Связьстрой» входили три компании: «Связьстрой-5» (Челябинск), «Связьстрой-2» (Краснодар) и «Межгорсвязьстрой». Из-за кризиса их оборот тогда сократился до $250 млн, и Троценко решил выйти из бизнеса. Но не бесплатно: «Мы нашли другого покупателя — «Конверс груп».
 				.event-organizers
 					.text
 						| Российский государственный университет физической культуры, спорта, молодёжи и туризма, РГУФКСМиТ <br>
