--- a/source/jade/info.jade
+++ b/source/jade/info.jade
@@ -38,7 +38,7 @@ block append content
 					h2 Россия и Вьетнам проведут двусторонние встречи на ВИИФ-2014
 					p.date 19 сентября 2014 года
 					p.grey 
-						i В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».
+						i В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».
 					p В рамках «Гидроавиасалона-2014», который прошел в Геленджике, Минпромторгом, корпорацией Ростех и правительством Ростовской области был подписан меморандум о реализации инвестпроекта.
 					p «Мы договорились о выделении участка зем ли на базе территории воинской части. Минобороны согласилось передать аэродром в эксплуатацию Ростеху, «Вертолетам России», — пояснил глава Минпромторга Денис Мантуров.
 				.bmeta.bot
@@ -58,12 +58,12 @@ block append content
 						.pdb-left
 							img(src="img/content/640-360-1.jpg", alt="").full
 						.pdb-right
-							p Взлет «Инфра инжиниринг» показывает, что такое история успеха в России
+							p Взлет «Инфра инжиниринг» показывает, что такое история успеха в России
 							p.photo-desc Фото: Павел Птицын
-					h2 Взлет «Инфра инжиниринг» показывает, что такое история успеха в России
+					h2 Взлет «Инфра инжиниринг» показывает, что такое история успеха в России
 					p.date 19 сентября 2014 года
 					p.grey 
-						i В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».
+						i В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».
 					p В рамках «Гидроавиасалона-2014», который прошел в Геленджике, Минпромторгом, корпорацией Ростех и правительством Ростовской области был подписан меморандум о реализации инвестпроекта.
 					p «Мы договорились о выделении участка зем ли на базе территории воинской части. Минобороны согласилось передать аэродром в эксплуатацию Ростеху, «Вертолетам России», — пояснил глава Минпромторга Денис Мантуров.
 					p Стимул, как справедливо считает Ф.Энгельс, зеркально отчуждает понимающий контраст. Аутизм неустойчив. Поведенческая терапия понимает объект. Эгоцентризм аннигилирует интеракционизм, что вызвало развитие функционализма и сравнительно-психологических исследований поведения. Выготский разработал, ориентируясь на методологию марксизма, учение которое утверждает что, воспитание потенциально.
