--- a/source/jade/links.jade
+++ b/source/jade/links.jade
@@ -30,7 +30,7 @@ block append content
 						.name Официальный сайт Минпромторг РФ
 						.site 
 							a(href="#") http://minpromtorg.gov.ru/
-						.text Официальный сайт Министерства промышленности и торговли Российской Федерации.Содержит новости, документы и прочая информация.
+						.text Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.
 					.igo
 						a(href="#") 
 				.item
@@ -38,7 +38,7 @@ block append content
 						.name Официальный сайт Минпромторг РФ
 						.site 
 							a(href="#") http://minpromtorg.gov.ru/
-						.text Официальный сайт Министерства промышленности и торговли Российской Федерации.Содержит новости, документы и прочая информация.
+						.text Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.
 					.igo
 						a(href="#")
 				.item
@@ -46,7 +46,7 @@ block append content
 						.name Официальный сайт Минпромторг РФ
 						.site 
 							a(href="#") http://minpromtorg.gov.ru/
-						.text Официальный сайт Министерства промышленности и торговли Российской Федерации.Содержит новости, документы и прочая информация.
+						.text Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.
 					.igo
 						a(href="#") 
 				.item
@@ -54,7 +54,7 @@ block append content
 						.name Официальный сайт Минпромторг РФ
 						.site 
 							a(href="#") http://minpromtorg.gov.ru/
-						.text Официальный сайт Министерства промышленности и торговли Российской Федерации.Содержит новости, документы и прочая информация.
+						.text Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.
 					.igo
 						a(href="#")
 				.item
@@ -62,7 +62,7 @@ block append content
 						.name Официальный сайт Минпромторг РФ
 						.site 
 							a(href="#") http://minpromtorg.gov.ru/
-						.text Официальный сайт Министерства промышленности и торговли Российской Федерации.Содержит новости, документы и прочая информация.
+						.text Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.
 					.igo
 						a(href="#") 
 				.item
@@ -70,7 +70,7 @@ block append content
 						.name Официальный сайт Минпромторг РФ
 						.site 
 							a(href="#") http://minpromtorg.gov.ru/
-						.text Официальный сайт Министерства промышленности и торговли Российской Федерации.Содержит новости, документы и прочая информация.
+						.text Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.
 					.igo
 						a(href="#") 				
 		//------------------------------------------------
