--- a/source/jade/results.jade
+++ b/source/jade/results.jade
@@ -200,7 +200,7 @@ block append content
 						li: a(href="#") Программа для ЭВМ
 						li: a(href="#") База данных
 						li: a(href="#") Селекционное достижение
-						li: a(href="#") Топология интегральных  микросхем
+						li: a(href="#") Топология интегральных микросхем
 						li: a(href="#") Ноу-хау
 			.box-right.boxside-sort-cat
 				.bname
