--- a/source/jade/services-item.jade
+++ b/source/jade/services-item.jade
@@ -57,7 +57,7 @@ block append content
 							li дюраметрические исследования
 							li изучение прокаливаемости
 							li микро/макро травление для выявления микро/макро структуры
-							li анализ и обработка изображений (структурных составляющих, неметаллических   включений, размер зерна и т.п.)
+							li анализ и обработка изображений (структурных составляющих, неметаллических включений, размер зерна и т.п.)
 					p.grey-without-strong
 						strong Основные возможности: 
 						| Исследования образцов и изделий из сплавов черных и цветных металлов.
