--- a/source/jade/story-item.jade
+++ b/source/jade/story-item.jade
@@ -42,10 +42,10 @@ block append content
 					img(src="img/content/slider-3.jpg", alt="").full
 					p.photo-desc Фото: Павел Птицын
 					p.grey 
-						i В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».
+						i В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».
 					p В рамках «Гидроавиасалона-2014», который прошел в Геленджике, Минпромторгом, корпорацией Ростех и правительством Ростовской области был подписан меморандум о реализации инвестпроекта.
 					p «Мы договорились о выделении участка земли на базе территории воинской части. Минобороны согласилось передать аэродром в эксплуатацию Ростеху, «Вертолетам России», — пояснил глава Минпромторга Денис Мантуров. 
-					p Бывший владелец холдинга «Связьстрой» Роман Троценко тоже получил предложение: «Были намеки, что продажа бизнеса поможет с заказами. Причем концерн хотели получить практически бесплатно». В «Связьстрой» входили три компании: «Связьстрой-5» (Челябинск), «Связьстрой-2» (Краснодар) и «Межгорсвязьстрой». Из-за кризиса их оборот тогда сократился до $250 млн, и Троценко решил выйти из бизнеса. Но не бесплатно: «Мы нашли другого покупателя — «Конверс груп».
+					p Бывший владелец холдинга «Связьстрой» Роман Троценко тоже получил предложение: «Были намеки, что продажа бизнеса поможет с заказами. Причем концерн хотели получить практически бесплатно». В «Связьстрой» входили три компании: «Связьстрой-5» (Челябинск), «Связьстрой-2» (Краснодар) и «Межгорсвязьстрой». Из-за кризиса их оборот тогда сократился до $250 млн, и Троценко решил выйти из бизнеса. Но не бесплатно: «Мы нашли другого покупателя — «Конверс груп».
 					.photo-desc-box
 						.pdb-left
 							p Сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35
@@ -62,7 +62,7 @@ block append content
 					p Группа «Инфра» была создана на базе активов «Телеком МТК», сообщила «Инфра». Бизнес «Телеком МТК» унаследовала компания «Регионстрой», которая сейчас является крупнейшей в группе по выручке.
 					p 
 						img(src="img/content/slider-3.jpg", alt="", style="float:right; width:300px; margin:0 0 15px 15px;")
-						| Вторая по выручке компания в группе «Инфра» — московский «Союз-телефонстрой». «Инфра» признает, что владеет лишь 20% этой компании. Но де-факто у группы все 100%, сказано в ее презентации (Огороднов, впрочем, говорит, что презентация не является подлинной; см. врез «История с презентацией»). Однако и Счетная палата в отчете о проверке «Связьинвеста» тоже включила «Союз-телефонстрой» в группу «Инфра». В июле 2010 г. Огороднов возглавил совет директоров «Союз-телефонстроя», а его жена Татьяна Огороднова вошла в ревизионную комиссию.
+						| Вторая по выручке компания в группе «Инфра» — московский «Союз-телефонстрой». «Инфра» признает, что владеет лишь 20% этой компании. Но де-факто у группы все 100%, сказано в ее презентации (Огороднов, впрочем, говорит, что презентация не является подлинной; см. врез «История с презентацией»). Однако и Счетная палата в отчете о проверке «Связьинвеста» тоже включила «Союз-телефонстрой» в группу «Инфра». В июле 2010 г. Огороднов возглавил совет директоров «Союз-телефонстроя», а его жена Татьяна Огороднова вошла в ревизионную комиссию.
 				.bmetabot
 					.share
 						span Поделиться
