added sweet-alert when page ready

--- a/source/jade/info.jade
+++ b/source/jade/info.jade
@@ -68,6 +68,19 @@ block append content
 					p «Мы договорились о выделении участка зем ли на базе территории воинской части. Минобороны согласилось передать аэродром в эксплуатацию Ростеху, «Вертолетам России», — пояснил глава Минпромторга Денис Мантуров.
 					p Стимул, как справедливо считает Ф.Энгельс, зеркально отчуждает понимающий контраст. Аутизм неустойчив. Поведенческая терапия понимает объект. Эгоцентризм аннигилирует интеракционизм, что вызвало развитие функционализма и сравнительно-психологических исследований поведения. Выготский разработал, ориентируясь на методологию марксизма, учение которое утверждает что, воспитание потенциально.
 					p Гетерогенность вызывает индивидуальный код, что отмечают такие крупнейшие ученые как Фрейд, Адлер, Юнг, Эриксон, Фромм. Чем больше люди узнают друг друга, тем больше индивидуальность осознаёт феноменологический онтогенез речи. Сознание иллюстрирует опасный кризис.
+					p swal
+					script(type="text/javascript").
+						$(document).ready(function() {
+							setTimeout(function() {
+								swal({
+									title: "Раздел в разработке!",
+									text: "",
+									type: "info",
+									confirmButtonText: "Закрыть"
+								});
+							}, 1000);
+						});
+
 				.bmeta.bot
 					.more
 						a(href="#") Читать полностью
