--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -3258,6 +3258,10 @@ footer
 				&:before
 					display none
 	.form-filter-2
+		.col
+			width 25%
+			display table-cell 
+			vertical-align top
 		h4
 			text-transform uppercase
 			color #3e3e3e
@@ -3295,10 +3299,11 @@ footer
 			padding-bottom 15px
 			border-bottom: 1px solid #f8f8f8
 			&:last-child
+				padding-bottom 0
 				border none
 		h4
 			mediumfont()
-			font-size 16px
+			font-size 14px
 			line-height 20px
 			margin 30px 0 25px 0
 			color: #303030
